--- a/todo
+++ b/todo
@@ -4,7 +4,7 @@
 必要な機能
 
 o  -モザイクをかける画像を選択する機能
-x  -選択された画像をウィンドウ表示する機能     
+o  -選択された画像をウィンドウ表示する機能     
 x  -モザイクをかける/剥がす範囲を選択する機能
 x  -モザイクをかける/剥がす機能
 x  -処理を終えた画像を別名保存する機能
